--- a/api-pipeline.yaml
+++ b/api-pipeline.yaml
@@ -14,6 +14,7 @@ stages:
       # Docker Hub Repo:  https://hub.docker.com/repository/docker/vplauzon/pas-api
       - template: helm-build.yaml
         parameters:
+          appVersionTxtPath:  deployment/AppVersion.txt
           appVersionCsPath:  PasWebApi/ApiVersion.cs
           chartName: ParserAsServiceApi
           imageName: vplauzon/pas-api
