--- a/helm-build.yaml
+++ b/helm-build.yaml
@@ -1,5 +1,5 @@
 parameters:
-  appVersionTxtPath:  deployment/ApiVersion.txt
+  appVersionTxtPath:  ''
   appVersionCsPath:  ''
   chartName:  ''
   imageName:  ''
@@ -40,7 +40,6 @@ jobs:
               publishWebProjects: True
               arguments: --configuration $(build-configuration) --output build-output
               zipAfterPublish: False
-          - script:  ls -l build-output/PasWebApi
           # Build Docker:  https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/build/docker#build-and-push
           - task: Docker@2
             displayName: Build and push Docker Image
