--- a/deployment/values-prod-blue.yaml
+++ b/deployment/values-prod-blue.yaml
@@ -1,2 +1,2 @@
-host1:  pas-api.vplauzon.com
-host2:  pas-api.blue.vplauzon.com
+host1:  pas-api.vincentlauzon.com
+host2:  pas-api.blue.vincentlauzon.com
