--- a/deployment/helm-chart/ParserAsServiceApi/Chart.yaml
+++ b/deployment/helm-chart/ParserAsServiceApi/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: ParserAsServiceApi
+name: pas-api
 version: 0.1.42
 #appVersion:
 description: Chart deploying the API of Parser as a Service
