--- a/PasApiClientTest/PasApiClientTest.csproj
+++ b/PasApiClientTest/PasApiClientTest.csproj
@@ -5,7 +5,12 @@
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
+  
+  <!--  Setting run settings, https://docs.microsoft.com/en-us/visualstudio/test/configure-unit-tests-by-using-a-dot-runsettings-file?view=vs-2019#set-a-build-property  -->
+  <PropertyGroup>
+    <RunSettingsFilePath>$(MSBuildProjectDirectory)/TestRunParameters-local.runsettings</RunSettingsFilePath>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
