--- a/nuget-pipeline.yaml
+++ b/nuget-pipeline.yaml
@@ -24,6 +24,7 @@ stages:
           scriptPath: deployment/patch-nuget-version.py
           arguments: PasApiClient/PasApiClient.csproj $(Build.BuildId)
       - script:  ls -l
+      - script:  ls -l PasApiClient
       # Bash script:  https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/utility/bash
       - task: Bash@3
         displayName: Copy Alpha project
