--- a/nuget-pipeline.yaml
+++ b/nuget-pipeline.yaml
@@ -29,6 +29,7 @@ stages:
       - task: Bash@3
         displayName: Copy Alpha project
         inputs:
+          targetType: inline
           script: cp PasApiClient/alpha-nuget.csproj PasApiClient/PasApiClient.csproj
       # .NET Core build:  https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/build/dotnet-core-cli#build
       - task: DotNetCoreCLI@2
