--- a/nuget-deploy.yaml
+++ b/nuget-deploy.yaml
@@ -32,6 +32,7 @@ jobs:
               artifact: nuget
           - script:  ls -l $(Pipeline.Workspace)/nuget/
           - script:  ls -l $(Pipeline.Workspace)/nuget/${{ parameters.environment }}
+          # Nuget.org:  https://www.nuget.org/packages/PasApiClient/
           # Nuget:  https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/package/nuget
           - task: NuGetCommand@2
             displayName:  Push Nuget Package to nuget.org
@@ -39,3 +40,5 @@ jobs:
               command: push
               packagesToPush: $(Pipeline.Workspace)/nuget/${{ parameters.environment }}/*.nupkg
               publishFeedCredentials:  nuget
+              feedsToUse:  select
+              nuGetFeedType:  external
