--- a/PasLibUnitTest/PasLibUnitTest.csproj
+++ b/PasLibUnitTest/PasLibUnitTest.csproj
@@ -9,6 +9,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
 
