--- a/PasApiClient/PasApiClient.csproj
+++ b/PasApiClient/PasApiClient.csproj
@@ -6,7 +6,7 @@
     <Authors>Vincent-Philippe Lauzon</Authors>
     <PackageProjectUrl>https://github.com/vplauzon/ParserAsServiceApi</PackageProjectUrl>
     <RepositoryUrl>https://github.com/vplauzon/ParserAsServiceApi</RepositoryUrl>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <PropertyGroup>
