--- a/.github/workflows/continuous-test.yaml
+++ b/.github/workflows/continuous-test.yaml
@@ -18,6 +18,6 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
-    # - name: Test
-    #   run: dotnet test PasLibUnitTest --no-restore --verbosity normal
-    - run:  ls -l PasLib/bin/Release
+    - name: Test
+      run: dotnet test PasLibUnitTest --no-restore --verbosity normal
+    
