--- a/.github/workflows/nuget-push-alpha.yaml
+++ b/.github/workflows/nuget-push-alpha.yaml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: dotnet restore PasLib
     - name: Patch version
-      run: python3 deployment/patch-nuget-version.py PasLib/PasLib.csproj ${{ github.run_number }} ${{ github.event.inputs.home }}
+      run: python3 deployment/patch-nuget-version.py PasLib/PasLib.csproj ${{ github.run_number }} ${{ github.event.inputs.alpha }}
     - name: Build Nuget
       run: dotnet build PasLib/nuget.csproj --configuration Release --no-restore
     - name: Publish Nuget
