--- a/PasLibUnitTest/PasLibUnitTest.csproj
+++ b/PasLibUnitTest/PasLibUnitTest.csproj
@@ -65,11 +65,12 @@
     <None Remove="Output\Constants.txt" />
     <None Remove="Output\Constant\BracketSubstitution.txt" />
     <None Remove="Output\Constant\Constants.txt" />
+    <None Remove="Output\Function\ChildFunctions.txt" />
     <None Remove="Output\Function\ConstantFunctions.txt" />
+    <None Remove="Output\Function\WithTextFunctions.txt" />
     <None Remove="Output\Identifier\Children.txt" />
     <None Remove="Output\Identifier\Text.txt" />
     <None Remove="Output\Identifier\This.txt" />
-    <None Remove="Output\Misc\Disjunction.txt" />
     <None Remove="Output\Object\Children.txt" />
     <None Remove="Output\Object\ConstantObjects.txt" />
     <None Remove="Output\This.txt" />
@@ -102,10 +103,10 @@
     <EmbeddedResource Include="Output\Array\TextArrays.txt" />
     <EmbeddedResource Include="Output\Constant\BracketSubstitution.txt" />
     <EmbeddedResource Include="Output\Constant\Constants.txt" />
+    <EmbeddedResource Include="Output\Function\WithTextFunctions.txt" />
     <EmbeddedResource Include="Output\Function\ConstantFunctions.txt" />
     <EmbeddedResource Include="Output\Identifier\Children.txt" />
     <EmbeddedResource Include="Output\Identifier\Text.txt" />
-    <EmbeddedResource Include="Output\Misc\Disjunction.txt" />
     <EmbeddedResource Include="Output\Object\Children.txt" />
     <EmbeddedResource Include="Output\Object\ConstantObjects.txt" />
   </ItemGroup>
