--- a/PasLibUnitTest/PasLibUnitTest.csproj
+++ b/PasLibUnitTest/PasLibUnitTest.csproj
@@ -70,6 +70,7 @@
     <None Remove="Output\Function\Prepend.txt" />
     <None Remove="Output\Function\WithTextFunctions.txt" />
     <None Remove="Output\Identifier\Children.txt" />
+    <None Remove="Output\Identifier\SubItem.txt" />
     <None Remove="Output\Identifier\Text.txt" />
     <None Remove="Output\Identifier\This.txt" />
     <None Remove="Output\Object\Children.txt" />
@@ -108,6 +109,7 @@
     <EmbeddedResource Include="Output\Function\WithTextFunctions.txt" />
     <EmbeddedResource Include="Output\Function\ConstantFunctions.txt" />
     <EmbeddedResource Include="Output\Identifier\Children.txt" />
+    <EmbeddedResource Include="Output\Identifier\SubItem.txt" />
     <EmbeddedResource Include="Output\Identifier\Text.txt" />
     <EmbeddedResource Include="Output\Object\Children.txt" />
     <EmbeddedResource Include="Output\Object\ConstantObjects.txt" />
