Add Integer output tests

--- a/PasLibUnitTest/PasLibUnitTest.csproj
+++ b/PasLibUnitTest/PasLibUnitTest.csproj
@@ -67,6 +67,7 @@
     <None Remove="Output\Constant\Constants.txt" />
     <None Remove="Output\Function\ChildFunctions.txt" />
     <None Remove="Output\Function\ConstantFunctions.txt" />
+    <None Remove="Output\Function\IntegerFunctions.txt" />
     <None Remove="Output\Function\Prepend.txt" />
     <None Remove="Output\Function\WithTextFunctions.txt" />
     <None Remove="Output\Identifier\Children.txt" />
@@ -105,6 +106,7 @@
     <EmbeddedResource Include="Output\Array\TextArrays.txt" />
     <EmbeddedResource Include="Output\Constant\BracketSubstitution.txt" />
     <EmbeddedResource Include="Output\Constant\Constants.txt" />
+    <EmbeddedResource Include="Output\Function\IntegerFunctions.txt" />
     <EmbeddedResource Include="Output\Function\Prepend.txt" />
     <EmbeddedResource Include="Output\Function\WithTextFunctions.txt" />
     <EmbeddedResource Include="Output\Function\ConstantFunctions.txt" />
