Iterate on continuous test

--- a/.github/workflows/continuous-test.yaml
+++ b/.github/workflows/continuous-test.yaml
@@ -15,9 +15,9 @@ jobs:
       with:
         dotnet-version: 3.1.301
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore code
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build code --configuration Release --no-restore
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test code --no-restore --verbosity normal
     
