--- a/.github/workflows/continuous-test.yaml
+++ b/.github/workflows/continuous-test.yaml
@@ -14,10 +14,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
+    # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-restore
     - name: Install dependencies
-      run: dotnet restore code
+      run: dotnet restore code/GramParser-Full.sln
     - name: Build
-      run: dotnet build code --configuration Release --no-restore
+      run: dotnet build code/GramParser-Full.sln --configuration Release --no-restore
     - name: Test
-      run: dotnet test code --no-restore --verbosity normal
+      run: dotnet test code/GramParser-Full.sln --no-restore --verbosity normal
     
