Iterate on CICD NuGet

--- a/.github/workflows/continuous-test.yaml
+++ b/.github/workflows/continuous-test.yaml
@@ -17,8 +17,10 @@ jobs:
     # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-restore
     - name: Install dependencies
       run: dotnet restore code/GramParser-Full.sln
+    # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-build
     - name: Build
       run: dotnet build code/GramParser-Full.sln --configuration Release --no-restore
+    # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-test
     - name: Test
       run: dotnet test code/GramParser-Full.sln --no-restore --verbosity normal
     
