--- a/code/GramParserLib/GramParserLib.csproj
+++ b/code/GramParserLib/GramParserLib.csproj
@@ -2,15 +2,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>0.2.1</Version>
+    <Version>0.3.0</Version>
     <Authors>Vincent-Philippe Lauzon</Authors>
-    <PackageProjectUrl>https://github.com/vplauzon/ParserAsServiceApi</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/vplauzon/ParserAsServiceApi</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/vplauzon/GramParser/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/vplauzon/GramParser/</RepositoryUrl>
     <Title>Grammar.Parser</Title>
-    <PackageId>Grammar.Parser</PackageId>
-    <Product>Grammar.Parser</Product>
+    <PackageId>GramParser</PackageId>
+    <Product>GramParser</Product>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Description>Grammar-based (generic) parser</Description>
+    <Description>Grammar-based parser</Description>
     <Copyright />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
