Iterate on CICD NuGet

--- a/.github/workflows/nuget-push-alpha.yaml
+++ b/.github/workflows/nuget-push-alpha.yaml
@@ -25,7 +25,7 @@ jobs:
       run: python3 deployment/patch-nuget-version.py code/GramParserLib/GramParserLib.csproj ${{ github.run_number }} ${{ github.event.inputs.alpha }}
     # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-build
     - name: Build Nuget
-      run: dotnet build code/GramParserLib --configuration Release --no-restore
+      run: dotnet build code/GramParserLib/GramParserLib.csproj --configuration Release --no-restore
     # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-nuget-push
     - name: Publish Nuget
       run:  nuget push code/GramParserLib/bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -ApiKey ${{ secrets.nuget }}
