Refactor rule tests into smaller classes

--- a/code/GramParserLibUnitTest/GramParserLibUnitTest.csproj
+++ b/code/GramParserLibUnitTest/GramParserLibUnitTest.csproj
@@ -131,4 +131,8 @@
     <ProjectReference Include="..\GramParserLib\GramParserLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Rule\" />
+  </ItemGroup>
+
 </Project>
