--- a/code/GramParserLib/GramParserLib.csproj
+++ b/code/GramParserLib/GramParserLib.csproj
@@ -23,5 +23,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
+    <PackageReference Include="System.Text.Json" Version="5.0.0" />
   </ItemGroup>
 </Project>
