Implement nullable and remove all bugs but MetaGrammar & FunctionExtractor

--- a/code/GramParserLib/GramParserLib.csproj
+++ b/code/GramParserLib/GramParserLib.csproj
@@ -12,6 +12,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Description>Grammar-based parser</Description>
     <Copyright />
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
