--- a/code/GramParserLibUnitTest/GramParserLibUnitTest.csproj
+++ b/code/GramParserLibUnitTest/GramParserLibUnitTest.csproj
@@ -15,6 +15,8 @@
     <AssemblyName>GramParserLibUnitTest</AssemblyName>
 
     <RootNamespace>GramParserLibUnitTest</RootNamespace>
+
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
