Add typed output

--- a/code/GramParserLibUnitTest/GramParserLibUnitTest.csproj
+++ b/code/GramParserLibUnitTest/GramParserLibUnitTest.csproj
@@ -82,6 +82,7 @@
     <None Remove="Output\Object\ConstantObjects.txt" />
     <None Remove="Output\This.txt" />
     <None Remove="Output\ThisArrays.txt" />
+    <None Remove="TypedOutput\FunctionInvocation.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -121,6 +122,7 @@
     <EmbeddedResource Include="Output\Identifier\Text.txt" />
     <EmbeddedResource Include="Output\Object\Children.txt" />
     <EmbeddedResource Include="Output\Object\ConstantObjects.txt" />
+    <EmbeddedResource Include="TypedOutput\FunctionInvocation.txt" />
   </ItemGroup>
 
   <ItemGroup>
