--- a/.github/workflows/continuous-dev.yaml
+++ b/.github/workflows/continuous-dev.yaml
@@ -1,4 +1,4 @@
-name:  Continuous Build / Test
+name:  Continuous Build / Test for dev
 
 on:
   push:
@@ -7,6 +7,9 @@ on:
     paths:
       - code/**
       - .github/workflows/continuous-dev.yaml
+
+env:
+  container-image:  gram-parser-workbench
 
 jobs:
   build:
@@ -31,4 +34,19 @@ jobs:
     # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-test
     - name: Test
       run: dotnet test code --no-restore --verbosity normal
-    
+
+    # Docker stuff
+    # See https://docs.docker.com/engine/reference/commandline/login/
+    - name:  Docker Login
+      run:  docker login -u ${{ secrets.docker_login }} -p ${{ secrets.docker_token }}
+    # See https://docs.docker.com/engine/reference/commandline/build/
+    - name:  Docker Build
+      run:  docker build --file code/Dockerfile --tag ${{ secrets.docker_repo }}/${{ container-image }}:${{ steps.patch-version.outputs.full-version }} code/GramParserWorkbench/bin/release/netcoreapp3.1
+    # See https://docs.docker.com/engine/reference/commandline/push/
+    - name:  Docker Push ${{ steps.patch-version.outputs.full-version }}
+      run:  docker push ${{ secrets.docker_repo }}/${{ container-image }}:${{ steps.patch-version.outputs.full-version }}
+    # See https://docs.docker.com/engine/reference/commandline/tag/
+    - name:  Docker Tag Dev
+      run:  docker tag ${{ secrets.docker_repo }}/${{ container-image }}:${{ steps.patch-version.outputs.full-version }} ${{ secrets.docker_repo }}/${{ container-image }}:dev
+    - name:  Docker Push Dev
+      run:  docker push ${{ secrets.docker_repo }}/${{ container-image }}:dev
