--- a/.github/workflows/continuous-dev.yaml
+++ b/.github/workflows/continuous-dev.yaml
@@ -19,6 +19,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.x
+    - name: Declare some variables
+      run: |
+        echo "Ref:  ${GITHUB_REF}"
+        echo "+ head:  ${GITHUB_REF#refs/heads/}"
+    # Patch the version of the library package with this run number
     - name: Patch version
       id:  patch-version
       run: python3 deployment/patch-version.py code/GramParserLib/GramParserLib.csproj ${{ github.run_number }} false
