--- a/.github/workflows/continuous-dev.yaml
+++ b/.github/workflows/continuous-dev.yaml
@@ -62,7 +62,7 @@ jobs:
     - name:  Docker Push ${{ steps.patch-version.outputs.full-version }}
       run:  docker push ${{ secrets.docker_repo }}/$IMAGE:${{ steps.patch-version.outputs.full-version }}
     # See https://docs.docker.com/engine/reference/commandline/tag/
-    - name:  Docker Tag Dev
-      run:  docker tag ${{ secrets.docker_repo }}/$IMAGE:${{ steps.patch-version.outputs.full-version }} ${{ secrets.docker_repo }}/$IMAGE:dev
-    - name:  Docker Push Dev
-      run:  docker push ${{ secrets.docker_repo }}/$IMAGE:dev
+    - name:  Docker Tag with the target environment
+      run:  docker tag ${{ secrets.docker_repo }}/$IMAGE:${{ steps.patch-version.outputs.full-version }} ${{ secrets.docker_repo }}/$IMAGE:${{ steps.environment-name.outputs.targetEnv }}
+    - name:  Docker Push target environment
+      run:  docker push ${{ secrets.docker_repo }}/$IMAGE:${{ steps.environment-name.outputs.targetEnv }}
