--- a/.github/workflows/continuous-dev.yaml
+++ b/.github/workflows/continuous-dev.yaml
@@ -66,3 +66,12 @@ jobs:
       run:  docker tag ${{ secrets.docker_repo }}/$IMAGE:${{ steps.patch-version.outputs.full-version }} ${{ secrets.docker_repo }}/$IMAGE:${{ steps.environment-name.outputs.targetEnv }}
     - name:  Docker Push target environment
       run:  docker push ${{ secrets.docker_repo }}/$IMAGE:${{ steps.environment-name.outputs.targetEnv }}
+
+      # Restart web site
+      # Login
+      - name: Azure Login
+        run: az login --service-principal -u ${{ secrets.sp_id }} -p ${{ secrets.sp_secret }} --tenant ${{ secrets.tenant_id }}
+      # Restart web site
+      - name: Restart web site
+        run:  |
+          
